@@ -1,5 +1,9 @@
 2020-07-26  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryCache.java:
+	Created RequestHandler and ResponseHandler instances to handle
+	NOTIFY requests and M-SEARCH responses, respectively.
+
 	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
 	Added register(SSDPDiscoveryService) and
 	unregister(SSDPDiscoveryService) methods to Listener interface.
